<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3DD"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".bienvenida">


    <ImageView
        android:id="@+id/cerrarPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:contentDescription="@string/imgclose"
        app:srcCompat="@drawable/baseline_close_24" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="227dp"
        android:layout_height="173dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/imgreciclaje"
        app:srcCompat="@drawable/_216931" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/h_bienvenida"
        android:fontFamily="@font/merriweather_sans_bold"
        android:text="@string/holaB"
        android:textAlignment="center"
        android:textColor="#265144"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/textViewRactiv"
        android:textAlignment="center" />

</LinearLayout>