<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_inicio">

    <fragment
        android:id="@+id/navigation_inicio"
        android:name="com.example.reto2.ui.inicio.InicioFragment"
        android:label="@string/title_inicio"
        tools:layout="@layout/fragment_inicio" />

    <fragment
        android:id="@+id/navigation_recoleccion"
        android:name="com.example.reto2.ui.recoleccion.RecoleccionFragment"
        android:label="@string/title_recoleccion"
        tools:layout="@layout/fragment_recoleccion" />

    <fragment
        android:id="@+id/navigation_recordatorio"
        android:name="com.example.reto2.ui.recordatorio.RecordatorioFragment"
        android:label="@string/title_recordatorio"
        tools:layout="@layout/fragment_recordatorio" />

    <fragment
        android:id="@+id/navigation_perfil"
        android:name="com.example.reto2.ui.recordatorio.RecordatorioFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_perfil" />

</navigation>