<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F3DD"
    tools:context=".menuscrollcomp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/perfil_2"
        android:contentDescription="@string/imgViewRecoU"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="152dp"
        android:fontFamily="@font/inter"
        android:text="@string/textViewRecoU"
        android:textColor="#39932C"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/imgViewLReco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/logo5_2"
                tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:fontFamily="@font/inter"
        android:text="@string/textViewRecopuntos"
        android:textColor="#0F4002"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="322dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="56dp"
                android:fontFamily="@font/merriweather_sans"
                android:text="@string/textViewquieres"
                android:textColor="#265144"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.179"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="TextSizeCheck" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView18"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewAI"
                            app:srcCompat="@drawable/ai_03" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewAI"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewAC"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewAC"
                            app:srcCompat="@drawable/ac1_01"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewAC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewAC"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewLL"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewllantas"
                            app:srcCompat="@drawable/llantasr_01_01"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewLL"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewllantas"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>



                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewB"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewbombillas"
                            app:srcCompat="@drawable/bombillasr1_01"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:id="@+id/textViewB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewbombillas"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    tools:ignore="TextSizeCheck">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewPB"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewpyb"
                            app:srcCompat="@drawable/pilasybatr1_01" />

                        <TextView
                            android:id="@+id/textViewPB"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewpyb"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewE"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewescom"
                            app:srcCompat="@drawable/escombrosr1_01" />

                        <TextView
                            android:id="@+id/textViewE"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginStart="15dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewescom"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="160.41dp"
                    android:layout_height="231.17dp"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"  >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageViewDT"
                            android:layout_width="match_parent"
                            android:layout_height="160.41dp"
                            android:contentDescription="@string/imgViewdtextiles"
                            app:srcCompat="@drawable/rt1_04" />

                        <TextView
                            android:id="@+id/textViewDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/inter"
                            android:text="@string/textViewdtextiles"
                            android:padding="5dp"
                            android:textColor="#265144"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#7DC144"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center">

        <ImageView
            android:id="@+id/Home"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewhomeB"
            app:srcCompat="@drawable/vector"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView16"
            android:layout_width="35dp"
            android:layout_height="33dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewRecol"
            app:srcCompat="@drawable/group_98"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="40dp"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewRecord"
            app:srcCompat="@drawable/dashicons_bell"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:id="@+id/iconoPerfilMenu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:contentDescription="@string/imgViewPerfil"
            app:srcCompat="@drawable/vector_2"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>